# capstone-rag

./: .env.example  .gitignore  README.md  check_chunks.py  check_index.py  check_refusal.py  debug_agent.py  pyproject.toml
docs/: .gitkeep
evals/: run_evals.py
evals/datasets/: qa.jsonl
evals/evaluators/: grounded.py  recall.py  refusal.py
src/: config.py  embedder.py  graph.py  ingest.py  retrieval.py
